# yamdb

./: .env  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  yamdb_workflow.yaml
.github/workflows/: yamdb_workflow.yaml  yamdb_workflow.yml
api/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20201224_2229.py  0002_auto_20210126_1304.py
api_yamdb/: .env  settings.py  urls.py
fixtures/: fixtures.json
user_management/: admin.py  serializers.py
user_management/migrations/: 0001_initial.py  0002_alter_user_first_name.py
