[tool.poetry]
name = "yamdb"
version = "0.1.0"
description = ""
authors = ["Evan <evan.vilagov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.1"
django-filter = "^2.4.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.6.0"
gunicorn = "^20.1.0"
django-environ = "^0.4.5"
pytest = "^6.2.4"
python-dotenv = "^0.17.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
